--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ on:
 permissions:
   contents: read
   pull-requests: read
+  actions: write
 
 jobs:
   lint:
@@ -73,6 +74,7 @@ jobs:
           path: |
             coverage.out
             coverage.html
+          retention-days: 1
 
   build:
     name: Build and Integration Test
