--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,46 +67,7 @@ jobs:
         run: |
           mkdir -p release-assets
           find artifacts -type f -name 'sym-*' -exec mv {} release-assets/ \;
-
-          # Create compressed versions for smaller downloads
-          cd release-assets
-          for binary in sym-*; do
-            if [[ "$binary" != *.tar.gz ]]; then
-              echo "Compressing $binary..."
-              tar -czf "${binary}.tar.gz" "$binary"
-              # Show size comparison
-              ORIG_SIZE=$(stat -c%s "$binary" 2>/dev/null || stat -f%z "$binary")
-              COMP_SIZE=$(stat -c%s "${binary}.tar.gz" 2>/dev/null || stat -f%z "${binary}.tar.gz")
-              echo "  Original: $ORIG_SIZE bytes, Compressed: $COMP_SIZE bytes"
-            fi
-          done
-          cd ..
-
           ls -lh release-assets/
-
-      - name: Import GPG key
-        if: vars.ENABLE_GPG_SIGNING == 'true'
-        run: |
-          echo "Importing GPG key for signing..."
-          echo "${{ secrets.GPG_PRIVATE_KEY }}" | gpg --batch --import
-          echo "GPG key imported successfully"
-
-      - name: Sign release assets
-        if: vars.ENABLE_GPG_SIGNING == 'true'
-        run: |
-          cd release-assets
-          echo "Signing all release assets..."
-          for file in sym-* *.tar.gz; do
-            if [[ -f "$file" ]] && [[ "$file" != *.sig ]]; then
-              echo "Signing $file..."
-              gpg --batch --yes --passphrase "${{ secrets.GPG_PASSPHRASE }}" \
-                --pinentry-mode loopback --detach-sign --armor "$file"
-              echo "  Created ${file}.asc"
-            fi
-          done
-          cd ..
-          echo "All assets signed successfully"
-          ls -lh release-assets/*.asc 2>/dev/null || echo "No signature files (GPG signing may be disabled)"
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
@@ -137,51 +98,11 @@ jobs:
           node-version: '20'
           registry-url: 'https://registry.npmjs.org'
 
-      - name: Verify package.json version
-        working-directory: npm
-        run: |
-          PKG_VERSION=$(node -p "require('./package.json').version")
-          EXPECTED_VERSION="${{ needs.extract-version.outputs.version }}"
-          if [ "$PKG_VERSION" != "$EXPECTED_VERSION" ]; then
-            echo "Error: package.json version ($PKG_VERSION) does not match expected version ($EXPECTED_VERSION)"
-            exit 1
-          fi
-          echo "Version verified: $PKG_VERSION"
-
-      - name: Install dependencies
-        working-directory: npm
-        run: npm install --omit=dev
-
-      - name: Check if version already published
-        id: check_published
-        working-directory: npm
-        run: |
-          PACKAGE_NAME=$(node -p "require('./package.json').name")
-          VERSION=$(node -p "require('./package.json').version")
-
-          echo "Checking if $PACKAGE_NAME@$VERSION is already published..."
-
-          if npm view "$PACKAGE_NAME@$VERSION" version 2>/dev/null; then
-            echo "Version $VERSION is already published to npm"
-            echo "already_published=true" >> $GITHUB_OUTPUT
-          else
-            echo "Version $VERSION is not yet published"
-            echo "already_published=false" >> $GITHUB_OUTPUT
-          fi
-
       - name: Publish to npm
-        if: steps.check_published.outputs.already_published == 'false'
         working-directory: npm
-        run: |
-          echo "Publishing to npm..."
-          npm publish --access public
-          echo "Successfully published to npm!"
+        run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-      - name: Skip publishing
-        if: steps.check_published.outputs.already_published == 'true'
-        run: echo "Skipping npm publish - version already exists"
 
   deploy-coverage:
     name: Deploy Coverage to GitHub Pages
@@ -203,14 +124,9 @@ jobs:
 
       - name: Run tests and generate coverage
         run: |
-          go test -v -race -coverprofile=coverage.out -covermode=atomic ./...
-          go tool cover -html=coverage.out -o coverage.html
-
-      - name: Prepare coverage for deployment
-        run: |
+          go test -short -v -race -coverprofile=coverage.out -covermode=atomic ./...
           mkdir -p coverage-report
-          cp coverage.html coverage-report/index.html
-          echo "Coverage report prepared for deployment"
+          go tool cover -html=coverage.out -o coverage-report/index.html
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
