refactor: change npm package name to @dev-symphony/sym
- Update package.json: @devsymphony/sym → @dev-symphony/sym
- Update error messages in npm/bin/sym.js
- Add npm/bin/ to git (was ignored by .gitignore)
- Enable MCP installation: claude mcp add sym npx @dev-symphony/sym mcp

--- a/npm/package.json
+++ b/npm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@devsymphony/sym",
+  "name": "@dev-symphony/sym",
   "version": "0.1.0",
   "description": "Symphony - LLM-friendly convention linter for AI coding assistants",
   "keywords": [
