fix: resolve critical workflow issues
Critical fixes:
- Move build job inline in release.yml (workflow_call artifacts not shared)
- Add main.Version variable for version embedding in binaries
- Fix golangci-lint version (latest → v1.62.2 for stability)
- Add build job dependencies (needs: [lint, test])

This ensures:
- Release and npm jobs can access build artifacts (was 100% failing)
- Binary version information is correctly embedded
- Consistent linter behavior across runs
- Build only runs after lint and test pass

Breaking change:
- build.yml no longer called from release.yml (inlined instead)
- Artifacts now properly shared within same workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v4
         with:
-          version: latest
+          version: v1.62.2
           args: --timeout=5m
 
       - name: Run govulncheck
@@ -79,6 +79,7 @@ jobs:
 
   build:
     name: Build and Integration Test
+    needs: [lint, test]
     uses: ./.github/workflows/build.yml
     with:
       version: 'ci-build'
