--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,14 +52,60 @@ jobs:
     uses: ./.github/workflows/ci.yml
 
   build:
-    name: Build binaries
+    name: Build ${{ matrix.goos }}-${{ matrix.goarch }}
     needs: [extract-version, ci]
     if: needs.extract-version.outputs.should_release == 'true'
-    uses: ./.github/workflows/build.yml
-    with:
-      version: ${{ needs.extract-version.outputs.version }}
-      upload-artifacts: true
-      retention-days: 1
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - goos: linux
+            goarch: amd64
+          - goos: linux
+            goarch: arm64
+          - goos: darwin
+            goarch: amd64
+          - goos: darwin
+            goarch: arm64
+          - goos: windows
+            goarch: amd64
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.25.1'
+          cache: true
+
+      - name: Build binary
+        env:
+          GOOS: ${{ matrix.goos }}
+          GOARCH: ${{ matrix.goarch }}
+          CGO_ENABLED: 0
+        run: |
+          VERSION="${{ needs.extract-version.outputs.version }}"
+          EXT=""
+          [ "$GOOS" = "windows" ] && EXT=".exe"
+          BINARY_NAME="sym-$GOOS-$GOARCH$EXT"
+
+          go build \
+            -ldflags "-s -w -X main.Version=$VERSION" \
+            -trimpath \
+            -o "$BINARY_NAME" \
+            ./cmd/sym
+
+          echo "✅ Built $BINARY_NAME"
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: sym-${{ matrix.goos }}-${{ matrix.goarch }}
+          path: sym-${{ matrix.goos }}-${{ matrix.goarch }}${{ matrix.goos == 'windows' && '.exe' || '' }}
+          if-no-files-found: error
+          retention-days: 1
 
   release:
     name: Create GitHub Release
