--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
             -o "$BINARY_NAME" \
             ./cmd/sym
 
-          echo "✅ Built $BINARY_NAME"
+          echo "Built $BINARY_NAME"
 
       - name: Upload artifact
         if: inputs.upload-artifacts
