Add CI/CD workflow (#5)
* ci: add GitHub Actions workflows and improve CI/CD pipeline

- Add build workflow for cross-platform compilation
- Add CI workflow with lint, test, and build stages
- Add release workflow with automated publishing
- Configure golangci-lint with comprehensive rules
- Update Go version to 1.25.1 across workflows
- Implement caching for faster CI runs
- Add GPG signing for release binaries
- Integrate govulncheck for security scanning

* feat: add MCP one-click installation support

- Add npm package for easy distribution
- Implement Chrome DevTools MCP-style installation
- Add comprehensive MCP documentation and API guide
- Create MCP E2E test script
- Add release template for future releases
- Update main README with MCP installation guide
- Update Makefile with CSS build targets for dashboard

Installation:
  claude mcp add symphony npx @devsymphony/sym@latest mcp

* ci: remove E2E tests from CI workflow, keep only unit tests

- Remove E2E test execution from CI workflow
- Keep coverage reporting and artifact upload
- Add SYM_BINARY env var support to mcp_test.sh for local testing

* ci: run unit tests only and remove Codecov integration

- Add -short flag to skip integration tests
- Remove Codecov upload step (keep local coverage reports)
- Simplify test matrix to single Go version (1.25.1)
- Keep coverage.out and coverage.html as GitHub artifacts

* ci: add artifact permissions and set retention to 1 day

- Add actions: write permission for artifact upload
- Set artifact retention-days to 1 (reduce storage from 90 days)
- Saves ~178MB storage per month (2MB × 89 days)

* refactor: simplify build.yml workflow to essential steps only

- Merge 'Build binary' and 'Verify binary' into single step
- Remove binary size check (go build validates correctness)
- Remove integration test step (unnecessary duplication)
- Remove redundant BINARY_NAME calculation
- Use exact artifact path instead of glob pattern
- Reduce from 130 lines to 78 lines (-52 

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 .claude/
 bin/
+!npm/bin/
+!npm/bin/*.js
+npm/bin/sym-*
+
+# Test coverage
 coverage.out
 coverage.html
 node_modules/
 .sym/
+*.coverprofile
+coverage.txt
