--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,27 +15,23 @@ permissions:
   actions: write
 
 jobs:
-  # lint:
-  #   name: Lint
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  #     - name: Set up Go
-  #       uses: actions/setup-go@v5
-  #       with:
-  #         go-version: '1.25.1'
-  #         cache: true
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.25.1'
+          cache: true
 
-  #     - name: Run go vet
-  #       run: go vet ./...
-
-  #     - name: Run golangci-lint
-  #       uses: golangci/golangci-lint-action@v7
-  #       with:
-  #         version: v2.4.0
-  #         args: --timeout=5m
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v9
+        with:
+          version: v2.7.2
 
   test:
     name: Unit Test
@@ -53,9 +49,6 @@ jobs:
 
       - name: Download dependencies
         run: go mod download
-
-      - name: Verify dependencies
-        run: go mod verify
 
       - name: Run tests
         run: go test -short -v -race -coverprofile=coverage.out -covermode=atomic ./...
